Fix screen sizing on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 html {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: "Sacramento", cursive, sans-serif;
+    font-family: "Sacramento", cursive, Arial, sans-serif;
 }
 
 *, *::before, *::after {
@@ -29,7 +30,7 @@ div {
     flex-flow: row wrap;
     margin: 0;
     position: absolute;
-    top: 43%;
+    top: 45%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
@@ -76,23 +77,26 @@ div {
 
 .options {
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     justify-content: center;
     align-items: center;
     margin: 0;
     position: absolute;
-    bottom: -7%;
+    bottom: 0%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     background-color: wheat;
-    height: 200px;
-    width: 400px;
+    height: 120px;
+    width: 600px;
+    padding-left: 50px;
+    padding-right: 50px;
     border-radius: 15px;
     font-family: Helvetica, Arial, sans-serif;
 }
 
 .slidecontainer {
     width: 70%; /* Width of the outside container */
+    margin-top: 20px;
 }
 .slidecontainer:hover {
     transform: scale(1.1);
@@ -135,7 +139,7 @@ div {
 }
 
 .gridLabel {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .clearButton {
@@ -144,8 +148,9 @@ div {
     border-radius: 5px;
     background-color: rgb(255, 243, 224);
     color: rgb(112, 88, 56);
-    height: 40px;
-    width: 70px;
+    height: 50px;
+    width: 80px;
+    margin-left: 60px;
 }
 
 .clearButton:hover {
